--- a/views/index.erb
+++ b/views/index.erb
@@ -3,7 +3,9 @@
   <body>
     <ul>
       <% @files.each do |file| %>
-        <li><%= file %></li>
+        <li>
+          <a href="<%= "#{@root_dir}/public/data/#{file}" %>" ><%= file %></a>
+        </li>
       <% end %>
     </ul>
   </body>
