require rack-test ; handle request for nonexistent file

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,6 +2,11 @@
 <html>
   <head>
     <title>CMS</title>
+
+    <% if session[:error] %>
+      <%= session.delete(:error) %>
+    <% end %>
+
   </head>
   <body>
     <%= yield %>
