restructure where common variables are initialized

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
-<p><%= @markdown.render("## This is the CMS Index!") %></p>
+<h2>This is the CMS Index!</h2>
 <ul>
   <% @files.each do |file| %>
     <li>
