--- a/views/edit_file.erb
+++ b/views/edit_file.erb
@@ -1,9 +1,7 @@
- <textarea name="edited_text" cols="100" rows="30">
-<%= @file %>
- </textarea>
- <form action="/<%= @filename %>/edit" method="post" id="edit">
-   <button id="edit">Submit changes</button>
- </form>
- <form action="/" method="get" id="cancel">
-   <button id="cancel">Cancel</button>
- </form>
+<form action="/<%= @filename %>/edit" method="post">
+  <textarea name="edited_content" dirname="<%= @file_path %>.dir" cols="100" rows="30"><%= @file %></textarea>
+    <button type="submit" id="edit">Submit changes</button>
+</form>
+<form action="/" method="get">
+  <button type="submit" id="cancel">Cancel</button>
+</form>
