fix path to absolute

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,7 +3,7 @@
   <head>
     <title>CMS</title>
     <link href="/stylesheets/cms.css" rel="stylesheet" type="text/css">
-    <link href="images/favicon.ico" rel="icon" type="image/x-icon">
+    <link href="/images/favicon.ico" rel="icon" type="image/x-icon">
 
     <% if session[:message] %>
       <p class='message'><%= session.delete(:message) %></p>
