add ability to delete files

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,7 +3,10 @@
   <% @files.each do |file| %>
     <li>
       <a href="<%= file %>" ><%= file %></a> - 
-      <a href="/<%= file %>/edit">edit</a>
+      <a href="/<%= file %>/edit">edit</a> - 
+      <form class="inline" action="/<%= file %>/delete" method="post">
+        <button type="submit">delete</button>
+      </form>
     </li>
   <% end %>
 </ul>
