--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@
     <li>
       <a href="<%= file %>" ><%= file %></a> - 
       <a href="/<%= file %>/edit">edit</a> - 
-      <form class="inline" action="/<%= file %>/delete" method="post">
+      <form style="display: inline" action="/<%= file %>/delete" method="post">
         <button type="submit">delete</button>
       </form>
     </li>
