--- a/views/index.erb
+++ b/views/index.erb
@@ -30,9 +30,11 @@
       <button form="signout" type="submit">Sign Out</button>
     </p>
 <% else %>
+      <button form="new_user" type="submit">Create an Account</button> - 
       <button form="signin" type="submit">Sign In</button>
   </div>
 <% end %>
 
 <form id="signout" style="display: inline" action="/users/signout" method="post"></form>
 <form id="signin" style="display: inline" action="/users/signin" method="get"></form>
+<form id="new_user" style="display: inline" action="/users/new" method="get"></form>
