--- a/views/edit_file.erb
+++ b/views/edit_file.erb
@@ -1,4 +1,4 @@
-<textarea name="edited_content" form="content" dirname="<%= @file_path %>.dir" cols="100" rows="30"><%= @file %></textarea>
+<textarea name="edited_content" form="content" dirname="<%== @file_path %>.dir" cols="100" rows="30"><%= @file %></textarea>
 
 <button form="content" type="submit" id="edit">Submit changes</button>
 <button form="cancel" type="submit">Cancel</button>
